<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/mainLinearLayout">
    <ScrollView android:id="@+id/scrollView1" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="5dip">
        <LinearLayout android:id="@+id/linearLayout5" android:orientation="vertical" android:layout_height="match_parent" android:layout_width="match_parent">
            <LinearLayout android:id="@+id/linearLayout2" android:orientation="vertical" android:layout_height="wrap_content" android:layout_width="match_parent">
                <TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:text="@string/name" android:textColor="@color/generalTextColor" android:layout_width="wrap_content"></TextView>
                <EditText android:layout_height="wrap_content" android:id="@+id/registPacientActivityUsernameEditText" android:layout_width="match_parent"></EditText>
                <TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:textColor="@color/generalTextColor" android:layout_width="wrap_content" android:text="@string/birthdate"></TextView>
                <LinearLayout android:id="@+id/linearLayout1" android:layout_height="wrap_content" android:layout_width="match_parent">
                    <EditText android:layout_height="wrap_content" android:id="@+id/registPacientActivityUsernameEditText" android:layout_width="wrap_content" android:layout_weight="0.8">
                    </EditText>
                    <Button android:id="@+id/button1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="0.2" android:text="@string/select"></Button>
                </LinearLayout>
                <TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:textColor="@color/generalTextColor" android:layout_width="wrap_content" android:text="@string/sex"></TextView>
                <RadioGroup android:id="@+id/radioGroup1" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_width="match_parent">
                    <RadioButton android:layout_width="wrap_content" android:id="@+id/radio0" android:layout_height="wrap_content" android:checked="true" android:textColor="@color/generalTextColor" android:text="@string/female"></RadioButton>
                    <RadioButton android:layout_width="wrap_content" android:id="@+id/radio1" android:layout_height="wrap_content" android:textColor="@color/generalTextColor" android:text="@string/male"></RadioButton>
                </RadioGroup>
                <TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:text="@string/address" android:textColor="@color/generalTextColor" android:layout_width="wrap_content"></TextView>
                <EditText android:singleLine="false" android:lines="3" android:minLines="3" android:gravity="top|left" android:maxLines="4" android:id="@+id/registPacientActivityAddressEditText" android:layout_height="wrap_content" android:layout_width="fill_parent" android:scrollbars="vertical"></EditText>
                <TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:text="@string/username" android:textColor="@color/generalTextColor" android:layout_width="wrap_content"></TextView>
                <EditText android:layout_height="wrap_content" android:id="@+id/registPacientActivityUsernameEditText" android:layout_width="match_parent"></EditText>
                <TextView android:layout_height="wrap_content" android:id="@+id/textView2" android:text="@string/password" android:textColor="@color/generalTextColor" android:layout_width="wrap_content"></TextView>
                <EditText android:layout_height="wrap_content" android:id="@+id/registPacientActivityPasswordEditText" android:layout_width="match_parent" android:inputType="textPassword"></EditText>
                <TextView android:layout_height="wrap_content" android:id="@+id/textView2" android:text="@string/passwordConfirmation" android:textColor="@color/generalTextColor" android:layout_width="wrap_content"></TextView>
                <EditText android:layout_height="wrap_content" android:id="@+id/registPacientActivityPasswordConfirmationEditText" android:layout_width="match_parent" android:inputType="textPassword"></EditText>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearLayout3" android:layout_height="wrap_content" android:layout_width="match_parent">
                <Button android:id="@+id/loginActivityLoginButton" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/register"></Button>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
